force-app/main/default/objects/dbt__Project_Employee__c/fields/dbt__Employee__c.field-meta.xml
<CustomField>
    <fullName>dbt__Employee__c</fullName>
    <description>Created 1st</description>
    <label>Employee</label>
    <referenceTo>dbt__Employee__c</referenceTo>
    <relationshipLabel>Project Employees</relationshipLabel>
    <relationshipName>Project_Employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>