force-app/main/default/objects/dbt__Project_Employee__c/fields/dbt__Project_Name__c.field-meta.xml
<CustomField>
    <fullName>dbt__Project_Name__c</fullName>
    <formula>dbt__Project__r.Name</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>