force-app/main/default/objects/dbt__Project_Employee__c/listViews/dbt__All.listView-meta.xml
<ListView>
    <fullName>dbt__All</fullName>
    <columns>NAME</columns>
    <columns>dbt__Project__c</columns>
    <columns>dbt__Employee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>